--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ import { siteConfig } from '@/config';
       },
       {
         title: 'Revisa y ejecuta',
-        description: 'Verifica tu contabilidad y despliega tu estrategia de la mano de tu equipo experto.',
+        description: 'Verifica tu contabilidad y despliega la estrategia de la mano de un equipo experto.',
         icon: 'lucide:rocket',
       },
     ]}
